Fix: layout spacing

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -2,7 +2,7 @@ $mainBackground: linear-gradient(0deg, $color-button--main, $color-button--light
 
 
 .Button {
-  min-width: rem(120);
+  min-width: rem(110);
   height: rem(40);
   padding-right: rem(10);
   padding-left: rem(10);
