--- a/src/components/Field/Field.scss
+++ b/src/components/Field/Field.scss
@@ -17,7 +17,7 @@
       color: $color-text--gray;
 
       font-size: rem(12);
-      line-height: rem(20);
+      line-height: rem(17);
     }
 
 
